# Senior-Project

./: LICENSE.txt  README.md
arduino_sketchbook/: README.md
arduino_sketchbook/arduino_multicast_control/: arduino_multicast_control.ino
arduino_sketchbook/libraries/ros_lib/arduino_control/: ArduinoControl.h
arduino_sketchbook/libraries/ros_lib/sensors/: RegistrationService.h
catkin_ws/: README.md  ROS.files  ROS.includes
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/sensors/: RegistrationServiceRequest.h  RegistrationServiceResponse.h
catkin_ws/devel/lib/arduino_control/: arduino_control
catkin_ws/devel/lib/bridge/: multicast_topic_bridge
catkin_ws/devel/lib/pkgconfig/: arduino_control.pc  bridge.pc  sensors.pc
catkin_ws/devel/lib/python2.7/dist-packages/sensors/: __init__.py
catkin_ws/devel/lib/python2.7/dist-packages/sensors/srv/: _RegistrationService.py
catkin_ws/devel/share/arduino_control/cmake/: arduino_control-msg-extras.cmake  arduino_control-msg-paths.cmake  arduino_controlConfig.cmake
catkin_ws/devel/share/bridge/cmake/: bridgeConfig.cmake
catkin_ws/devel/share/common-lisp/ros/arduino_control/msg/: ArduinoControl.lisp  _package.lisp  arduino_control-msg.asd
catkin_ws/devel/share/common-lisp/ros/sensors/srv/: _package.lisp  _package_RegistrationService.lisp
catkin_ws/devel/share/roseus/ros/arduino_control/: manifest.l
catkin_ws/devel/share/roseus/ros/arduino_control/msg/: ArduinoControl.l
catkin_ws/devel/share/roseus/ros/sensors/: manifest.l
catkin_ws/devel/share/roseus/ros/sensors/srv/: RegistrationService.l
catkin_ws/devel/share/sensors/cmake/: sensors-msg-extras.cmake  sensors-msg-paths.cmake  sensorsConfig.cmake
catkin_ws/install/: setup.sh
catkin_ws/install/include/arduino_control/: ArduinoControl.h
catkin_ws/install/include/sensors/: RegistrationService.h  RegistrationServiceResponse.h
catkin_ws/install/lib/arduino_control/: arduino_control
catkin_ws/install/lib/bridge/: multicast_topic_bridge
catkin_ws/install/lib/pkgconfig/: arduino_control.pc  bridge.pc  sensors.pc
catkin_ws/install/lib/python2.7/dist-packages/: sensors-0.0.0.egg-info
catkin_ws/install/lib/python2.7/dist-packages/arduino_control/msg/: _ArduinoControl.py  __init__.py
catkin_ws/install/lib/python2.7/dist-packages/sensors/: pi_camera.py  sensing_manager.py
catkin_ws/install/lib/python2.7/dist-packages/sensors/srv/: __init__.py
catkin_ws/install/lib/sensors/: digital_tester.py  pi_camera.py  sensing_manager.py
catkin_ws/install/share/arduino_control/: package.xml
catkin_ws/install/share/arduino_control/cmake/: arduino_controlConfig.cmake
catkin_ws/install/share/arduino_control/msg/: ArduinoControl.msg
catkin_ws/install/share/bridge/: package.xml
catkin_ws/install/share/bridge/cmake/: bridgeConfig.cmake
catkin_ws/install/share/roseus/ros/arduino_control/: manifest.l
catkin_ws/install/share/roseus/ros/sensors/: manifest.l
catkin_ws/install/share/sensors/cmake/: sensors-msg-extras.cmake  sensors-msg-paths.cmake
catkin_ws/install/share/sensors/resource/: sensing_window.ui
catkin_ws/src/arduino_control/: CMakeLists.txt
catkin_ws/src/arduino_control/msg/: ArduinoControl.msg
catkin_ws/src/arduino_control/src/: arduino_control.cpp
catkin_ws/src/bridge/: CMakeLists.txt
catkin_ws/src/bridge/src/: multicast_topic_bridge.cpp
catkin_ws/src/sensors/: CMakeLists.txt  setup.py
catkin_ws/src/sensors/nodes/: digital_tester.py  pi_camera.py  sensing_manager.py
catkin_ws/src/sensors/resource/: sensing_window.ui
catkin_ws/src/sensors/src/sensors/: __init__.py  pi_camera.py  sensing_manager.py  sensing_manager_gui_thread.py  sensing_register.py  sensing_subscriber.py
catkin_ws/src/sensors/srv/: RegistrationService.srv
documentation/: Documentation.docx  Hardware Architecture.vsdx  Presentation.pptx  Software Architecture.vsdx
install_files/: README.md  install.py
install_files/resources/: install  run.py
(+9 files in other folders)
