<?xml version="1.0"?>
<package>
  <name>arduino_control</name>
  <version>0.0.0</version>
  <description>This package can be used as a storage container for messages to be used by the arduino</description>
  <maintainer email="dksteele@captechu.edu">Daniel Steele</maintainer>
  <author email="dksteele@captechu.edu">Daniel Steele</author>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
