<?xml version="1.0"?>
<package>
  <name>bridge</name>
  <version>0.0.0</version>
  <description>The bridge package containing a utility for sending a msg over a standard multicasting port</description>
  <maintainer email="dksteele@captechu.edu">Daniel Steele</maintainer>
  <author email="dksteele@captechu.edu">Daniel Steele</author>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>rosconsole</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosconsole</run_depend>

  <export>
  </export>
</package>
